# odys

./: .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: documentation.md
.github/actions/setup_environment/: action.yml
.github/actions/setup_just_and_uv/: action.yml
.github/workflows/: main.yml  publish.yml  validate-codecov-config.yml
docs/: index.md
docs/api/: solvers.md
docs/api/domain/: exceptions.md  objective.md  scenarios.md  validation.md
docs/api/domain/entities/: base.md  generator.md  load.md  market.md  portfolio.md  storage.md
docs/api/optimization/constraints/: constraints_group.md  cvar_constraints.md  generator_constraints.md  market_constraints.md  model_constraint.md  scenario_constraints.md  storage_constraints.md
docs/api/optimization/model/: linopy_converter.md  milp_model.md  model_builder.md  objectives.md  registry.md  sets.md  variables.md
docs/api/optimization/parameters/: generator_parameters.md  (+5 more)
docs/api/results/: dispatch.md  index.md  optimization_results.md
docs/api/solvers/: config_translators.md  solver.md  solver_config.md
docs/api/utils/: logging.md
docs/architecture/: hexagonal-architecture.json  refactoring-plan.md
docs/assets/examples/: basic_dispatch.html  battery_dispatch.html  cvar_market_risk.html  market_arbitrage.html
docs/examples/: basic_dispatch.md  cvar_market_risk.md  market_arbitrage.md  markets.md  markets_stochastic.md  stochastic.md  stochastic_no_batteries.md
docs/user_guide/: asset_portfolio.md  energy_system.md  generator.md  load.md  market.md  mathematical_notation.md  multi_stage.md  optimization.md  scenario.md  solvers.md  stochastic.md  stochastic_scenario.md  storage.md
examples/: example1.py  example_1_basic_dispatch.py  example_2_leverage_battery.py  example_3_market.py  example_cvar.py  example_multi_stage_dispatch.py
src/odys/: __init__.py  energy_system.py
src/odys/domain/: __init__.py  exceptions.py  objective.py  scenarios.py  units.py  validation.py
src/odys/optimization/: __init__.py  linopy_converter.py  milp_model.py  model_builder.py  objectives.py  parameters_builder.py  sets.py  variables.py
src/odys/results/: __init__.py  dispatch.py  optimization_results.py  result_containers.py  solved_model_data.py
src/odys/solvers/: config_translators.py  solver.py  solver_config.py
tests/: smoke_test.py
tests/integration/: test_energy_system_optimization.py  test_scenario_optimization.py
tests/unit/test_domain/: test_validated_energy_system.py
tests/unit/test_energy_system_models/: test_validated_energy_system.py  test_validation.py
tests/unit/test_math_model/: test_model_builder.py
tests/unit/test_optimization/: test_optimization_results.py
tests/unit/test_results/: test_optimization_results.py
tests/unit/test_solvers/: test_option_translators.py  test_solver.py  test_solver_config.py
(+36 files in other folders)
